[BE](fix): transaction fees, and wallets logic
